--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.image{
+  position: relative;
+  height: 100vh;
+}
+.content{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+}
+.content span.img-txt{
+  background-color: #333;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 1.5rem;
+  letter-spacing: 10px;
+}
